# rust-static-error-analyzer

./: .gitignore  Cargo.toml  README.md  data.csv  demo.txt  main.py  rust-toolchain.toml
src/: ast_parser.rs  compiler.rs  graph.rs  graphs.rs  main.rs
src/analysis/: calls_to_chains.rs  create_graph.rs  mod.rs  panics.rs  types.rs
src/ast_parser/: ast.rs  mod.rs  tokens.rs  utils.rs
