[package]
name = "static-result-analyzer"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Thomas Kas", "Grace Stok"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.rust-analyzer]
rustc_private=true

[dependencies]
dot = "0.1.4"
toml = "0.8.13"
