[package]
name = "static-result-analyzer"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Thomas Kas", "Grace Stok"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.rust-analyzer]
rustc_private=true

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
dot = "0.1.4"
nom = "7.1.3"
toml = "0.8.13"
